--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "orbeji/phpunit-pr-coverage-check",
   "description": "Check the code coverage of a PR using the clover report of phpunit",
+  "license": "MIT",
   "keywords": [
     "PR",
     "Pull Request",
@@ -11,34 +12,43 @@
     "CI",
     "Code coverage"
   ],
-  "license": "MIT",
+  "require": {
+    "php": "^7.1 || ^8.0",
+    "ext-json": "*",
+    "ext-simplexml": "*",
+    "composer-runtime-api": "^2.2",
+    "mashape/unirest-php": "^3.0",
+    "ptlis/diff-parser": "^1.0.2",
+    "symfony/console": "^5.4.36 || ^6.4 || ^7.0.4",
+    "symfony/polyfill-uuid": "^1.29.0"
+  },
+  "require-dev": {
+    "ergebnis/composer-normalize": "^2.42",
+    "nyholm/symfony-bundle-test": "^3.0",
+    "phpstan/phpstan": "^1.10",
+    "phpunit/phpunit": "^10.4.0",
+    "roave/security-advisories": "dev-latest",
+    "squizlabs/php_codesniffer": "^3.8",
+    "symfony/framework-bundle": "5.4 || ^6.4 || ^7.0",
+    "symfony/var-dumper": "^7.0",
+    "webmozart/assert": "^1.11.0"
+  },
   "autoload": {
-    "psr-4": { "Orbeji\\PrCoverageChecker\\": "src" }
+    "psr-4": {
+      "Orbeji\\PrCoverageChecker\\": "src"
+    }
   },
   "autoload-dev": {
     "psr-4": {
       "Orbeji\\PrCoverageChecker\\": "tests"
     }
   },
-  "require": {
-    "composer-runtime-api": "^2.2",
-    "php": "^7.1|^8.0|^8.1|^8.2|^8.3",
-    "mashape/unirest-php": "3.*",
-    "ptlis/diff-parser": "^1.1.0|^1.0.2",
-    "symfony/console": "^7.0.4|^5.4.36|^6.4",
-    "symfony/polyfill-uuid": "^1.29.0",
-    "ext-simplexml": "*",
-    "ext-json": "*"
-  },
-  "require-dev": {
-    "roave/security-advisories": "dev-latest",
-    "nyholm/symfony-bundle-test": "^3.0",
-    "phpunit/phpunit": "^10.4.0",
-    "phpstan/phpstan": "^1.10",
-    "symfony/var-dumper": "^7.0",
-    "symfony/framework-bundle": "5.4 || ^6.4 || ^7.0",
-    "squizlabs/php_codesniffer": "^3.8",
-    "webmozart/assert": "^1.11.0"
-  },
-  "bin": ["bin/pr-coverage-check"]
+  "bin": [
+    "bin/pr-coverage-check"
+  ],
+  "config": {
+    "allow-plugins": {
+      "ergebnis/composer-normalize": true
+    }
+  }
 }
