--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "phpstan/phpstan": "^1.10",
     "phpunit/phpunit": "^10.4.0",
     "roave/security-advisories": "dev-latest",
+    "rregeer/phpunit-coverage-check": "^0.3.1",
     "squizlabs/php_codesniffer": "^3.8",
     "symfony/framework-bundle": "5.4 || ^6.4 || ^7.0",
     "symfony/var-dumper": "^7.0",
