--- a/.github/workflows/compatibility.yml
+++ b/.github/workflows/compatibility.yml
@@ -17,6 +17,15 @@ jobs:
         exclude:
         - php: '8.1'
           symfony: '7.0.*'
+        - php: '7.2'
+          symfony: '7.0.*'
+        - php: '7.4'
+          symfony: '7.0.*'
+        - php: '7.2'
+          symfony: '6.4.*'
+        - php: '7.4'
+          symfony: '6.4.*'
+
     steps:
       - uses: actions/checkout@v4
 
