--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "symfony/polyfill-uuid": "^1.29.0"
   },
   "require-dev": {
-    "ergebnis/composer-normalize": "^2.42",
+    "ergebnis/composer-normalize": "^2.42 || ^2.8.0",
     "nyholm/symfony-bundle-test": "^3.0",
     "phpstan/phpstan": "^1.10",
     "phpunit/phpunit": "^10.4.0",
