--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "Code coverage"
   ],
   "require": {
-    "php": "^7.1 || ^8.0",
+    "php": "^7.2 || ^7.4 || ^8.1 || ^8.2 || ^8.3 || ^8.4",
     "ext-json": "*",
     "ext-simplexml": "*",
     "composer-runtime-api": "^2.2",
@@ -23,15 +23,14 @@
     "symfony/polyfill-uuid": "^1.29.0"
   },
   "require-dev": {
-    "ergebnis/composer-normalize": "^2.42 || ^2.8.0",
-    "nyholm/symfony-bundle-test": "^3.0",
+    "nyholm/symfony-bundle-test": "^3.0 || ^1.8.0",
     "phpstan/phpstan": "^1.10",
-    "phpunit/phpunit": "^10.4.0",
+    "phpunit/phpunit": "^7.5.0",
     "roave/security-advisories": "dev-latest",
     "rregeer/phpunit-coverage-check": "^0.3.1",
     "squizlabs/php_codesniffer": "^3.8",
     "symfony/framework-bundle": "5.4 || ^6.4 || ^7.0",
-    "symfony/var-dumper": "^7.0",
+    "symfony/var-dumper": "^5.4 || ^6.4 || ^7.0",
     "webmozart/assert": "^1.11.0"
   },
   "autoload": {
