--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   test:
     user: "${DOCKERUID}:${DOCKERGID}"
-    image: orbeji/base:xdebug
+    image: orbeji/base:7.2
     volumes:
       - ./:/app
       - ./coverage:/opt/phpstorm-coverage
