--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Composer install
         uses: php-actions/composer@v6
+        with:
+          php-version: 7.2
 
       - name: PHP Code Sniffer
         uses: php-actions/phpcs@v1
