--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "ptlis/diff-parser": "^1.1.0",
     "symfony/console": "^6.4",
     "symfony/polyfill-php83": "^1.31",
-    "symfony/polyfill-uuid": "^1.31.0"
+    "symfony/polyfill-uuid": "^1.31.0",
+    "webmozart/assert": "^1.11.0"
   },
   "require-dev": {
     "nyholm/symfony-bundle-test": "^3.0",
@@ -31,8 +32,7 @@
     "rregeer/phpunit-coverage-check": "^0.3.1",
     "squizlabs/php_codesniffer": "^3.10.3",
     "symfony/framework-bundle": "^6.4",
-    "symfony/var-dumper": "^6.4",
-    "webmozart/assert": "^1.11.0"
+    "symfony/var-dumper": "^6.4"
   },
   "autoload": {
     "psr-4": {
