--- a/.github/workflows/compatibility.yml
+++ b/.github/workflows/compatibility.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         operating-system: [ 'ubuntu-22.04' ]
         php: [ '8.3' ]
-        symfony: [ '6.4.*']
+        symfony: [ '6.4.*', '7.4.*']
 
     steps:
       - uses: actions/checkout@v4
