--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "composer-runtime-api": "^2.2",
     "mashape/unirest-php": "^3.0.4",
     "ptlis/diff-parser": "^1.1.0",
-    "symfony/console": "^6.4",
+    "symfony/console": "^6.4|^7.4",
     "symfony/polyfill-php83": "^1.31",
     "symfony/polyfill-uuid": "^1.31.0",
     "webmozart/assert": "^1.11.0"
@@ -31,8 +31,8 @@
     "roave/security-advisories": "dev-latest",
     "rregeer/phpunit-coverage-check": "^0.3.1",
     "squizlabs/php_codesniffer": "^3.10.3",
-    "symfony/framework-bundle": "^6.4",
-    "symfony/var-dumper": "^6.4"
+    "symfony/framework-bundle": "^6.4|^7.4",
+    "symfony/var-dumper": "^6.4|^7.4"
   },
   "autoload": {
     "psr-4": {
